# 02-10-26-medgemma

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_AGENTS_README.md  Dockerfile  Dockerfile.data  Dockerfile.modelserver  Dockerfile.orchestrator  Dockerfile.worker  FRONTEND_INVENTORY.md  FRONTEND_RUNBOOK.md  LICENSE-NOTICE.md  Makefile  PR_DESCRIPTION.md  README.frontend.md  README.md  README_CONTENT.md  README_ORCHESTRATOR.md  REPO_STRUCTURE.md  RUNBOOK.md  RUNBOOK_IMPROVE_MODEL_QUALITY.md  alembic.ini  cypress.config.js  cypress.config.ts  dev-requirements.txt  docker-compose.agent.yml  docker-compose.flwr.yml  docker-compose.memory.yml  docker-compose.multiagents.yml  docker-compose.orchestrator.yml  docker-compose.routing.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  hardhat.config.cjs  index.html  inventory.md  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: main.ts  preview.tsx
DEVNOTES/: ISSUES_DISCOVERED.md  REPO_INVENTORY.md
LEGAL/: README.md
adapters/: registry.json
agent_system/: main.py  test_system.py
ai/: medgemma_anomaly.py
alembic/: env.py
app/: __init__.py  main.py
backend/: .env.example  Dockerfile  README.md  __init__.py  api.py  audit.py  conftest.py  docker-compose.yml  embed_server.py  explainability.py  medgemma_service.py  requirements-dev.txt  requirements.txt  schemas.py
cache/: solidity-files-cache.json
compliance/: BAA_checklist.md  DPA_checklist.md  DPIA.md  clinical_validation_plan.md  data_flow.mmd  data_inventory.csv  encryption.md  generate_evidence_report.py  (+6 more)
(+1717 files in other folders)
