[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pediscreen-ai"
version = "0.1.0"
description = "PediScreen AI — Scalable Early Developmental Screening"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10",
    "httpx>=0.24.0",
]
validation = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "plotly>=5.0.0",
    "streamlit>=1.20.0",
]

[project.scripts]
pedi = "pedi_screen.cli:main"

[tool.setuptools.packages.find]
include = ["pedi_screen*", "src*"]
